styles/base/_wizard-buttons.scss
@use '../../styles/settings' as *;

.wizard-button-wrapper {
  height: 100%;
  max-height: $footer-height;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  padding: $spacing-400;
  background-color: $bg-light-primary;
  z-index: 3;
  border-top: 1px solid $color-shade-navy-20;
  display: grid;
  grid-template-areas: 'left . right';

  @include media('tablet') {
    max-height: $footer-height-tablet;
  }

  @include media('desktop') {
    max-height: $footer-height-desktop;
  }

  .wizard-button-next {
    margin-left: auto;
    grid-area: right;
  }

  .button[name='next'],
  .button[name='back'] {
    @include elevation-1;
    display: flex;
    align-items: center;

    &::before {
      background-position: center;
      background-size: contain;
      background-repeat: no-repeat;
      display: block;
      width: 20px;
      height: 20px;
      content: '';
    }
  }

  .button[name='next'] {
    @extend %button;
    @extend %button--primary;

    &::before {
      background-image: url('../../../../icons/icon-wizard-next-button-white-arrow-right.svg');
      order: 1;
      margin-left: 8px;
    }
  }

  .button[name='back'] {
    @extend %button;
    @extend %button--hollow;
    grid-area: left;

    &::before {
      background-image: url('../../../../icons/icon-wizard-back-button-navy-arrow-left.svg');
      margin-right: 8px;
    }
  }
}

.wizard-button-wrapper--progress-start {
  max-height: $footer-height-progress-start;
  grid-template-areas:
    'header header header'
    'left . right';

  @include media('tablet') {
    max-height: $footer-height-tablet-progress-start;
  }

  @include media('desktop') {
    max-height: $footer-height-desktop-progress-start;
  }
}

.repeat-actions .item-add {
  @include elevation-1;
  @extend %button;
  @extend %button--hollow;
}

